--- a/public/style/_containers.scss
+++ b/public/style/_containers.scss
@@ -30,7 +30,7 @@
 
 .fixed-right {
   top: 0;
-  padding-top: 136px;
+  padding-top: 105px;
   height: 100vh;
   position: fixed;
   right: 20px;
